strategy status info (#1)
